# Crawly

./: .gitignore  CMakeLists.txt  README.md  cutil.sh  find_duplicates.py  util.sh  webcrawler.drawio
lib/GetCURL/: GetCURL.cpp  GetCURL.hpp
lib/GetSSL/: GetSSL.cpp  GetSSL.hpp
lib/GetURL/: GetURL.cpp  GetURL.hpp
lib/HtmlParser/: HtmlParser.cpp
src/: Crawly.cpp  Crawly.hpp
